<resources>
    <string name="app_name">ToDoApp</string>
    <string name="create_new_task_button">create new task button</string>
    <string name="title_hint">Title</string>
    <string name="task_hint">Task</string>
    <string name="add_button">Add</string>
    <string name="create_new_task">Create New Task</string>
    <string name="title_filed">Title:</string>
    <string name="task_filed">Task:</string>
    <string name="priority">Priority</string>
    <string name="edit_task">Edit task</string>
    <string name="in_progress_tab">In progress</string>
    <string name="completed_tab">Completed</string>
    <string name="set_reinder">Set reinder</string>
    <string name="set_alarm_button">set alarm</string>
    <string name="alarm_button">alarm button</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>