<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/header_text_of_new_task"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        android:textAlignment="center"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/header_text_of_new_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_content_layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_hint"
        app:layout_constraintTop_toBottomOf="@id/title_layout_edit"
        android:padding="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:singleLine="false"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/alarm_label"
        android:text="@string/set_reinder"
        android:textStyle="bold"
        android:textSize="7pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/task_content_layout_edit"/>
    <TextView
        android:id="@+id/time_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/alarm"
        app:layout_constraintBottom_toTopOf="@id/priority_label_edit"
        app:layout_constraintTop_toBottomOf="@id/alarm_label"
        />

    <ImageButton
        android:padding="10dp"
        android:id="@+id/alarm"
        android:text="@string/set_alarm_button"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_label"
        android:src="@drawable/ic_in_progress"
        android:contentDescription="@string/alarm_button" />
    <TextView
        android:id="@+id/priority_label_edit"
        android:textStyle="bold"
        android:text="@string/priority"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:textSize="7pt"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        app:layout_constraintWidth_min="50dp"
        android:orientation="horizontal"
        android:background="@drawable/blue_outline"
        app:layout_constraintTop_toBottomOf="@id/priority_label_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="15dp"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/create_new_task_button"
        android:src="@android:drawable/ic_input_add"
        app:maxImageSize="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel_button_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:backgroundTint="@color/white"
        android:layout_margin="20dp"
        android:contentDescription="@string/create_new_task_button"
        android:src="@drawable/ic_cancel_icon"
        app:maxImageSize="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/red" />


</androidx.constraintlayout.widget.ConstraintLayout>